--- a/application-prod.yml
+++ b/application-prod.yml
@@ -1,1 +1,10 @@
+spring:
+  application:
+    name: Config-prod
 
+eureka:
+  instance:
+  prefer-ip-address: true
+  client:
+      fetch-registry: true
+      register-with-eureka: true
