--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
-application:
-  name: config-dev
+  application:
+    name: Config-dev
 
 eureka:
   instance:
@@ -8,4 +8,3 @@ eureka:
   client:
       fetch-registry: true
       register-with-eureka: true
-
